--- a/Algorithms_project_1.ipynb
+++ b/Algorithms_project_1.ipynb
@@ -28,40 +28,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6HebTtWUTovB",
-        "outputId": "cfcdaa60-2440-425e-d47f-d32343d262cc",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "HI\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(\"HI\");"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "KqSyDj_RUTh9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
@@ -71,9 +37,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wDc7TM9BYMQ7",
-        "outputId": "fbef9b06-995b-4939-c55c-8bcaa13beaf7"
+        "outputId": "5e9dc1b4-32dc-4cda-92a8-f46ee2cfbff4"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -94,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IvZpY9N4ek1M",
-        "outputId": "3aabc43b-41d8-4923-b9b4-fdcaa859ba9a"
+        "outputId": "48ce801c-90e1-4afa-b35b-60610d05e229"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +70,7 @@
           "text": [
             "Collecting anytree\n",
             "  Downloading anytree-2.8.0-py2.py3-none-any.whl (41 kB)\n",
-            "\u001b[?25l\r\u001b[K     |███████▉                        | 10 kB 21.9 MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20 kB 12.4 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30 kB 7.0 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40 kB 6.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 41 kB 226 kB/s \n",
+            "\u001b[?25l\r\u001b[K     |███████▉                        | 10 kB 10.5 MB/s eta 0:00:01\r\u001b[K     |███████████████▊                | 20 kB 14.0 MB/s eta 0:00:01\r\u001b[K     |███████████████████████▋        | 30 kB 18.3 MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 40 kB 13.2 MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 41 kB 351 kB/s \n",
             "\u001b[?25hRequirement already satisfied: six>=1.9.0 in /usr/local/lib/python3.7/dist-packages (from anytree) (1.15.0)\n",
             "Installing collected packages: anytree\n",
             "Successfully installed anytree-2.8.0\n"
@@ -121,34 +87,116 @@
       "metadata": {
         "id": "Y5V8Krl3eNRT"
       },
-      "execution_count": 9,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "root=Node(\"root\")\n",
+        "nodes={}\n",
+        "nodes[root.name]=root"
+      ],
+      "metadata": {
+        "id": "Qds_pFhzhiIR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "parent_key=\"\"\n",
+        "def create_Node(data,index):\n",
+        "    try:\n",
+        "      if (data[\"key\"]==''):\n",
+        "          return\n",
+        "\n",
+        "      global parent_key\n",
+        "      if (index == 0):\n",
+        "          if(data[\"key\"] in nodes):\n",
+        "            parent_key = nodes[data[\"key\"]]\n",
+        "            return\n",
+        "          else:\n",
+        "            nodes[data[\"key\"]] = Node(data[\"key\"],parent=root,data=data)\n",
+        "            parent_key = nodes[data[\"key\"]]\n",
+        "            return\n",
+        "            \n",
+        "      else:\n",
+        "        \n",
+        "        nodes[data[\"key\"]] = Node(data[\"key\"],parent=parent_key,data=data)\n",
+        "    except:\n",
+        "          print(data[\"key\"],nodes[parent_key])\n",
+        "          return -1"
+      ],
+      "metadata": {
+        "id": "d6F-DGhewIM3"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "with open('/content/drive/My Drive/Colab Notebooks/UNSPSC_English.csv',encoding=\"utf8\") as unspsc_file:\n",
-        "    [ next(unspsc_file) for _ in range(9)]  \n",
+        "    [ next(unspsc_file) for _ in range(9)]   \n",
         "    unspsc_reader = csv.DictReader(unspsc_file, delimiter=',')\n",
-        "    titles=[[\"Segment\",\"Segment Title\"],[\"family\",\"Family Title\"],[\"Class\",\"Class Title\"],[\"Commodity\",\"Commodity Title\"]]\n",
+        "    [ next(unspsc_reader) for _ in range(2)] \n",
+        "    titles=[[\"Segment Title\",\"Segment\"],[\"Family Title\",\"Family\"]]\n",
         "    for line in unspsc_reader:\n",
-        "      print(line)\n",
-        "      break\n"
+        "      create_Node({\"key\":line[titles[0][0]],\"title\" : line[titles[0][1]]},0)\n",
+        "      for index in range(1,len(titles)):\n",
+        "        if(create_Node({\"key\":line[titles[index][0]],\"title\" : line[titles[index][1]]},index) == -1):\n",
+        "          continue\n",
+        "      parent_key = \"\"\n",
+        "          \n"
+      ],
+      "metadata": {
+        "id": "rO05LAG2X9JP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from anytree.exporter import DotExporter\n",
+        "DotExporter(root).to_picture(\"root.png\")"
+      ],
+      "metadata": {
+        "id": "5gu-98LgeLu_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(RenderTree(root))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "rO05LAG2X9JP",
-        "outputId": "8c6fae35-6180-4ddc-9a18-0859ef58051a"
+        "id": "r67wSihmME-P",
+        "outputId": "20f1fb03-5c11-40d7-bf64-ccb7372a7289"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "OrderedDict([('Version', 'UNSPSC v23_0701'), ('Key', '100001'), ('Segment', '10000000'), ('Segment Title', 'Live Plant and Animal Material and Accessories and Supplies'), ('Segment Definition', 'This segment includes live, wild and domesticated, seeds and plants and animals. This segment also includes materials and equipment used in the care, containment and feeding of live plants and animals.'), ('Family', ''), ('Family Title', ''), ('Family Definition', ''), ('Column1', ''), ('Class', ''), ('Class Title', ''), ('Class Definition', ''), ('Commodity', ''), ('Commodity Title', ''), ('Definition', ''), ('Synonym', '活植物、活动物及其附件和用品, 活植物、活動物及其附件和用品, Levende og animalsk materiale, tilbehør og forsyning, Levende planten &amp; dieren materialen. Toebehoren &amp; toeleveringen, Fournitures, accessoires et matériel pour plantes et animaux vivants, Lebende Pflanzen und Tiermaterial und Zubehör und Bedarf, Élő növényi és állati eredetű anyagok, tartozékok és felszerelések, Piante e Animali, Accessori e Forniture, 生植物（植木）、動物の資材、付属品および供給品, 살아  있는  동식물  및  동식물성 생산품, Levende dyr og planter, tilbehør og materiell, Materiais, Acessórios e Suprimentos de Plantas e Animais Vivos, Material Vivo Vegetal y Animal, Accesorios y Suministros, Levande växter och djur samt tillbehör och materiel'), ('Acronym', '')])\n"
+            "IOPub data rate exceeded.\n",
+            "The notebook server will temporarily stop sending output\n",
+            "to the client in order to avoid crashing it.\n",
+            "To change this limit, set the config variable\n",
+            "`--NotebookApp.iopub_data_rate_limit`.\n",
+            "\n",
+            "Current values:\n",
+            "NotebookApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
+            "NotebookApp.rate_limit_window=3.0 (secs)\n",
+            "\n"
           ]
         }
       ]
@@ -156,21 +204,11 @@
     {
       "cell_type": "code",
       "source": [
-        "def create_Node(data):\n",
-        "    if not check_Parent(data[\"segment_title\"]):\n",
-        "        nodes[data[\"segment_title\"]] = Node(data[\"segment_title\"],parent=root,data=data)\n",
-        "    else:\n",
-        "        nodes[data[\"family\"]]\n",
-        "    \n",
-        "\n",
-        "def check_Parent(data_title):\n",
-        "    if data_title in nodes:\n",
-        "        return True\n",
-        "    return False\n",
-        "    "
+        "from anytree.search import find \n",
+        "list(map(lambda child_nodes: find(child_nodes,lambda node: node.name == \"Land and Buildings and Structures and Thoroughfares\"),root.children))"
       ],
       "metadata": {
-        "id": "2HVTv3BIerMN"
+        "id": "nUaUXREPPfV9"
       },
       "execution_count": null,
       "outputs": []
@@ -178,13 +216,59 @@
     {
       "cell_type": "code",
       "source": [
+        "n = Node(\"n\")\n",
+        "a = Node(\"a\", parent=n)\n",
+        "b = Node(\"b\", parent=n)\n",
+        "c = Node(\"c\", parent=n)\n",
+        "d = Node(\"d\", parent=c)\n",
+        "n.children"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7HGYGbvxS3ZU",
+        "outputId": "1d26c53c-3bee-48e0-ad95-582bbb0fbefd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(Node('/n/a'), Node('/n/b'), Node('/n/c'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "5gu-98LgeLu_"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7jp2eKOvTM6W",
+        "outputId": "0e37f95d-8686-4994-bf53-c081062feb73"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Node('/n/a')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     }
   ]
 }
